--- a/index.css
+++ b/index.css
@@ -25,9 +25,9 @@ body {
     border-radius: 10px;
 }
 
-#addTaskBtn {
+#addTaskBtn, #toggleDoneBtn {
     justify-content: center;
-    width: 28%;
+    width: 20%;
     margin-left: 10px;
     padding: 8px;
     border-radius: 10px;
@@ -49,7 +49,8 @@ ul {
 li {
     margin-bottom: 8px;
 }
-.newitem{
+
+.newitem {
     display: flex;
     width: 79%;
     margin-left: 5px;
@@ -59,7 +60,7 @@ li {
     border-radius: 7px;
 }
 
-.task{
+.task {
     background: darkgray;
     padding: 10px;
     border-radius: 10px;
@@ -83,10 +84,16 @@ li {
     margin-right: 12px;
 }
 
-.h{
+.done {
+    text-decoration: line-through;
+    color: gray;
+}
+
+.h {
     color: white;
     margin-left: 15px;
 }
-.center{
+
+.center {
     margin-left: 15px;
 }
